# snake_rust

./: Cargo.toml
src/: main.rs
src/game/: components.rs  food.rs  mod.rs  snake.rs  wall.rs
src/game/game_over/: mod.rs
src/main_menu/: components.rs  mod.rs
src/main_menu/sub_menu/: components.rs  mod.rs
